# carta-package-tauri

./: .gitignore  README.md  extract_appimage.sh  main.js  package-lock.json  package.json
scripts/Windows/: extract_appimage.sh
scripts/WindowsLinux/: extract_appimage.sh
scripts/macOS/: copy_backend.sh  copy_frontend.sh  package.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/templates/: carta.desktop
